--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -6,7 +6,7 @@ header{
   background-image: url(../img/background.jpg);
   background-position: center;
   width: 100%;
-  height: 450px;
+  height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,9 +14,9 @@ header{
 header h1{
   padding: 0.2em;
   text-align: center;
-  color: #ffffff;
+  color: #FFF719;
   font-size: 5em;
-  border: solid #ffffff 6px;
+  border: solid #FFF719 10px;
 }
 section{
 width: 25%;
@@ -27,4 +27,8 @@ section input{
   width: 15em;
   float: right;
   margin-right: 20%;
+}
+section h2{
+  text-align: center;
+  font-size: 3.5em; 
 }
