--- a/Server/files/css/style.css
+++ b/Server/files/css/style.css
@@ -3,10 +3,11 @@
   padding: 0;
 }
 header{
-  background-image: url(../img/background.jpg);
+  background-image: url(../img/nba.jpg);
   background-position: center;
   width: 100%;
-  height: 600px;
+  height: 1000px;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,9 +15,9 @@ header{
 header h1{
   padding: 0.2em;
   text-align: center;
-  color: #FFF719;
+  color: #1775FF;
   font-size: 5em;
-  border: solid #FFF719 10px;
+  border: solid #F91E33 10px;
 }
 section{
 width: 25%;
