--- a/Server/files/css/style.css
+++ b/Server/files/css/style.css
@@ -15,13 +15,17 @@ header{
 header h1{
   padding: 0.2em;
   text-align: center;
-  color: #1775FF;
+  color: #BB0018;
   font-size: 5em;
-  border: solid #F91E33 10px;
+  background-color: #18309E;
+  opacity: 0.99;
+  border-radius: 500px;
 }
 section{
 width: 25%;
 margin: 0 auto;
+height: 100vh;
+padding-top: 10px;
 
 }
 section input{
